Bug 458524 - Issuing a counter proposal uses the wrong identity
Summary: Issuing a counter proposal uses the wrong identity
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: calendar (other bugs)
Version First Reported In: 5.21.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-30 21:19 UTC by Aaron Williams
Modified: 2023-08-25 08:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Williams 2022-08-30 21:19:57 UTC
SUMMARY
I was invited to a meeting (Microsoft Exchange) and when I click "Counter proposal" and enter a new time, the email is rejected because it is using a different identity than what is associated with the account.

I have three accounts set up, one for home, one for an organization I belong to, and one for work. Even though this is with the work account the sending email address is from the home identity.

It should use the same account/identity as it was received from.


STEPS TO REPRODUCE
1. Have multiple accounts
2. Have an exchange IMAP account (not first account)
3. Receive an inventation for a meeting
4. Click "Counter proposal" button
5. Change the time of the meeting
6. Click OK
7. See notification that says, "E-Mail Sending Failed Failed to transport message. Server error: 5..7.8 Username and Password not accepted. LEarn more at...
8. Open outbox folder (in my case, it's one of the Local Folders).
9. Open the email that is supposed to go out.
10. See that the "From" is from my personal email account, not the account (work) where the message was received.
OBSERVED RESULT
It is using the wrong identity for the counter proposal.

EXPECTED RESULT
I expect it to use the same identity from which the original invitation was received.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Daniel Vrátil 2023-08-23 20:53:46 UTC
Git commit 6f5376963ecdd087f49e775c185d953d11232a4b by Daniel Vrátil.
Committed on 23/08/2023 at 22:53.
Pushed by dvratil into branch 'release/23.08'.

Use correct identity when sending iTIP counter-proposal

Pass the original recipient address all the way to MailScheduler and select the
right sender identity based on that address and use the address a "From:"
address.
FIXED-IN: 5.24.1

M  +1    -1    src/itiphandler.cpp
M  +9    -7    src/itiphandlerhelper_p.cpp
M  +5    -2    src/itiphandlerhelper_p.h
M  +19   -7    src/mailscheduler_p.cpp
M  +5    -2    src/mailscheduler_p.h
M  +7    -2    src/scheduler_p.h

https://invent.kde.org/pim/akonadi-calendar/-/commit/6f5376963ecdd087f49e775c185d953d11232a4b
Comment 2 Daniel Vrátil 2023-08-25 08:19:54 UTC
Git commit 89a05bc3db6cd14172fe4222a3f33b1ab18a80e7 by Daniel Vrátil.
Committed on 25/08/2023 at 10:18.
Pushed by dvratil into branch 'release/23.08'.

Use correct identity when sending iTIP counter-proposal

Pass the original recipient address all the way to MailScheduler and select the
right sender identity based on that address and use the address as "From:"
address.
FIXED-IN: 5.24.1

M  +1    -1    src/itiphandler.cpp
M  +9    -7    src/itiphandlerhelper_p.cpp
M  +5    -2    src/itiphandlerhelper_p.h
M  +19   -7    src/mailscheduler_p.cpp
M  +5    -2    src/mailscheduler_p.h
M  +7    -2    src/scheduler_p.h

https://invent.kde.org/pim/akonadi-calendar/-/commit/89a05bc3db6cd14172fe4222a3f33b1ab18a80e7
Comment 3 Daniel Vrátil 2023-08-25 08:20:37 UTC
Git commit f958b0c356909a60e4a3222ab7949f38247fee5b by Daniel Vrátil.
Committed on 25/08/2023 at 10:20.
Pushed by dvratil into branch 'master'.

Use correct identity when sending iTIP counter-proposal

Pass the original recipient address all the way to MailScheduler and select the
right sender identity based on that address and use the address as "From:"
address.
FIXED-IN: 5.24.1

M  +1    -1    src/itiphandler.cpp
M  +9    -7    src/itiphandlerhelper_p.cpp
M  +5    -2    src/itiphandlerhelper_p.h
M  +19   -7    src/mailscheduler_p.cpp
M  +5    -2    src/mailscheduler_p.h
M  +7    -2    src/scheduler_p.h

https://invent.kde.org/pim/akonadi-calendar/-/commit/f958b0c356909a60e4a3222ab7949f38247fee5b