Use correct identity when sending iTIP counter-proposal

Pass the original recipient address all the way to MailScheduler and select the
right sender identity based on that address and use the address a "From:"
address.

BUG: 458524
FIXED-IN: 5.24.1